added speech outline

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -36,6 +36,30 @@ URL: https://code.google.com/p/io-2012-slides
   </slide>
 
 <slide>
+    <hgroup>
+      <h2>PageObjects: Speak the language of domain</h2>
+      asdsad
+    </hgroup>
+
+    <hgroup class="build">
+        <h3>What is the domain for Wikipedia project?</h2>
+        <h4>Organizes and shares the knowledge worldwide</h3>
+    </hgroup>
+
+    <hgroup class="build">
+    <h3>What is the domain for Wikipedia’s navigation sidebar? </h2>
+    <h4>Privides navigation links for project- and page related tools; allows to switch on multiple languages</h3>
+    </hgroup>
+
+    <hgroup class="build">
+    <h3>Everything has a domain…</h2>
+    </hgroup>
+   
+
+</slide>
+
+
+<slide>
 <pre class="prettyprint" data-lang="csharp">
 static void Main(string[] args)
 {
